--- a/apps/docs/src/pages/docs/ecosystem/packages.mdx
+++ b/apps/docs/src/pages/docs/ecosystem/packages.mdx
@@ -22,6 +22,17 @@ The Ecopages ecosystem is composed of several modular packages. You only install
 
 ---
 
+## Routers
+
+Specialized routers for different application needs.
+
+| Package | Purpose |
+| :--- | :--- |
+| **[`@ecopages/browser-router`](https://jsr.io/@ecopages/browser-router)** | Standard browser-based router with View Transitions support. |
+| **[`@ecopages/react-router`](https://jsr.io/@ecopages/react-router)** | React-specific router enabling SPA navigation for React apps. |
+
+---
+
 ## Integrations
 
 These packages add support for different rendering engines.
@@ -51,6 +62,7 @@ Tools for processing assets and extending Bun's loading capabilities.
 
 | Package | Purpose |
 | :--- | :--- |
+| **[`@ecopages/file-system`](https://jsr.io/@ecopages/file-system)** | Utilities for file system operations and route discovery. |
 | **[`@ecopages/radiant`](https://www.npmjs.com/package/@ecopages/radiant)** | A minimalist web component library for reactive UI. |
 | **[`@ecopages/scripts-injector`](https://www.npmjs.com/package/@ecopages/scripts-injector)** | Helper for lazy-loading scripts in the browser. |
 
