--- a/apps/docs/src/pages/docs/getting-started/introduction.mdx
+++ b/apps/docs/src/pages/docs/getting-started/introduction.mdx
@@ -61,6 +61,7 @@ The result? Fast static pages, minimal dependencies, and code you can actually u
 - **Portfolios** – Beautiful static sites with interactive components
 - **Dashboards** – React or Lit components with live API data
 - **APIs** – REST endpoints alongside your static pages
+- **Everything Else** – Ecopages is flexible enough to build whatever you can imagine
 
 ## Quick Example
 
