--- a/apps/docs/src/pages/docs/integrations/mdx.mdx
+++ b/apps/docs/src/pages/docs/integrations/mdx.mdx
@@ -61,7 +61,7 @@ This content will be wrapped by the BaseLayout component.
 
 ### Metadata
 
-Page metadata (like title and description) can be defined by exporting a `getMetadata` function, similar to standard TypeScript pages.
+Page metadata (like title and description) can be defined by exporting a `getMetadata` function.
 
 ```markdown
 export const getMetadata = () => ({
