--- a/apps/docs/src/pages/docs/core/includes.mdx
+++ b/apps/docs/src/pages/docs/core/includes.mdx
@@ -73,7 +73,8 @@ const Head = eco.component<HeadProps>({
 	render: ({ title, meta, links, scripts }) => html`	
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />${meta}
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		${meta}
 		<title>${title}</title>${links}${scripts}
 	</head>`
 });
